--- a/src/style.css
+++ b/src/style.css
@@ -72,6 +72,7 @@ button:focus {
   border-radius: 12px;
 }
 
+/* //                                                                                                                                                                                            Todo */
 /* --------- */
 /* Navbar Section  */
 /* --------- */
@@ -406,7 +407,16 @@ button:focus {
   bottom: 0 !important;
   padding-top: 10px !important;
   padding-bottom: 8px !important ;
+  display: flex;
+  flex-direction: column;
+  
 }
+
+.footer-row {
+  display: flex;
+  justify-content: center;
+}
+
 .footer-copywright {
   text-align: center !important;
 }
@@ -414,6 +424,7 @@ button:focus {
 .footer-body {
   z-index: 1;
   text-align: center !important;
+
 }
 
 @media (max-width: 767px) {
